# AI-Projects

./: README.md
Crew_Projects/First_Crew_Project/: README.md  pyproject.toml  report.md  ui.md
Crew_Projects/First_Crew_Project/src/first_crew_project/: crew.py  main.py
Crew_Projects/First_Crew_Project/src/first_crew_project/config/: agents.yaml  tasks.yaml
