[project]
name = "first_crew_project"
version = "0.1.0"
description = "first_crew_project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
first_crew_project = "first_crew_project.main:run"
run_crew = "first_crew_project.main:run"
train = "first_crew_project.main:train"
replay = "first_crew_project.main:replay"
test = "first_crew_project.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
